# HA-RohlikCZ

./: hacs.json  pyproject.toml  readme.md
custom_components/rohlikcz/: __init__.py  calendar.py  const.py  sensor.py  strings.json  utils.py
custom_components/rohlikcz/translations/: cs.json  en.json
custom_components/rohlikcz2/: __init__.py  binary_sensor.py  const.py  hub.py  manifest.json  rohlik_api.py  sensor.py  services.py  services.yaml
custom_components/rohlikcz2/translations/: cs.json
custom_components/rohlikcz2/www/: rohlikcz-cart-card.js
www/rohlikcz2/: rohlikcz-shopping-list-card.js
