[project]
name = "ha-rohlikcz"
version = "0.3.1"
description = "Home Assistant custom integration for Rohlik.cz"
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2024.12.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    "voluptuous>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-asyncio>=0.23.0",
]
